[gd_scene load_steps=11 format=3 uid="uid://b7vk33hyejvf2"]

[ext_resource type="Script" uid="uid://guovkc0f45fn" path="res://Scripts/UI/ui.gd" id="1_de23q"]
[ext_resource type="Texture2D" uid="uid://dwsfbmt7v15kw" path="res://Assets/UI/UItilemap_Dia.png" id="2_de23q"]
[ext_resource type="Texture2D" uid="uid://b1e43sqebkm02" path="res://Assets/UI/CatAdventure_Title.png" id="3_fo61o"]
[ext_resource type="Texture2D" uid="uid://d4g4a8jmrrkhx" path="res://Assets/UI/GameOver.png" id="4_alcrr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c7mb3"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ahcct"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_de23q"]
bg_color = Color(0.903643, 0.341858, 0.347918, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fo61o"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_duuxe"]
texture = ExtResource("4_alcrr")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1c2ca"]
texture = ExtResource("3_fo61o")

[node name="UI" type="Control"]
process_mode = 3
z_index = 4096
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_de23q")

[node name="StartMenu" type="Control" parent="."]
visible = false
custom_minimum_size = Vector2(640, 380)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="StartMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 30
theme_override_constants/margin_bottom = 60

[node name="Label" type="Label" parent="StartMenu/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 48
text = "Cat Adventure"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="StartMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 25
alignment = 2

[node name="StartButton" type="Button" parent="StartMenu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(180, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 24
text = "Start Game"

[node name="QuitButton" type="Button" parent="StartMenu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(180, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 24
text = "Quit Game"

[node name="PauseMenu" type="Control" parent="."]
process_mode = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="PauseMenu"]
process_mode = 3
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_c7mb3")

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu"]
process_mode = 3
custom_minimum_size = Vector2(1000, 500)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -500.0
offset_top = 20.0
offset_right = 500.0
offset_bottom = 520.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 50

[node name="NinePatchRect" type="NinePatchRect" parent="PauseMenu/MarginContainer"]
layout_mode = 2
texture = ExtResource("2_de23q")
region_rect = Rect2(2, 2, 93, 92)
patch_margin_left = 11
patch_margin_top = 8
patch_margin_right = 21
patch_margin_bottom = 23

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu/MarginContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/MarginContainer/NinePatchRect/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 40

[node name="ResumeButton" type="Button" parent="PauseMenu/MarginContainer/NinePatchRect/MarginContainer/VBoxContainer"]
z_index = 1
custom_minimum_size = Vector2(240, 55)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 26
text = "Return to Game"

[node name="ReturnToMenuButton" type="Button" parent="PauseMenu/MarginContainer/NinePatchRect/MarginContainer/VBoxContainer"]
z_index = 1
custom_minimum_size = Vector2(240, 55)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 26
text = "Exit to Menu"

[node name="QuitButton" type="Button" parent="PauseMenu/MarginContainer/NinePatchRect/MarginContainer/VBoxContainer"]
z_index = 1
custom_minimum_size = Vector2(240, 55)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 26
text = "Quit Game"

[node name="HUD" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="HUD"]
custom_minimum_size = Vector2(920, 100)
layout_mode = 1
offset_right = 4.0
offset_bottom = 27.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ProgressBar" type="ProgressBar" parent="HUD/MarginContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_ahcct")
theme_override_styles/fill = SubResource("StyleBoxFlat_de23q")
value = 100.0
show_percentage = false

[node name="SceneTransition" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="SceneTransition"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fo61o")

[node name="DeathScreen" type="Control" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="DeathScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 500
theme_override_constants/margin_top = 250
theme_override_constants/margin_right = 500
theme_override_constants/margin_bottom = 180

[node name="VBoxContainer" type="VBoxContainer" parent="DeathScreen/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 85

[node name="Panel" type="Panel" parent="DeathScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_duuxe")

[node name="ReturnToMenuButton" type="Button" parent="DeathScreen/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(240, 55)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 26
text = "To Menu"

[node name="WinScreen" type="Control" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="WinScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 320
theme_override_constants/margin_top = 180
theme_override_constants/margin_right = 320
theme_override_constants/margin_bottom = 180

[node name="VBoxContainer" type="VBoxContainer" parent="WinScreen/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 85

[node name="Panel" type="Panel" parent="WinScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_1c2ca")

[node name="ReturnToMenuButton" type="Button" parent="WinScreen/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(240, 55)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 26
text = "To Menu"

[connection signal="button_up" from="StartMenu/MarginContainer/VBoxContainer/StartButton" to="." method="_on_start_button_button_up"]
[connection signal="button_up" from="StartMenu/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_button_up"]
[connection signal="button_up" from="PauseMenu/MarginContainer/NinePatchRect/MarginContainer/VBoxContainer/ResumeButton" to="." method="pause_button_pressed"]
[connection signal="button_up" from="PauseMenu/MarginContainer/NinePatchRect/MarginContainer/VBoxContainer/ReturnToMenuButton" to="." method="return_to_menu_button_pressed"]
[connection signal="button_up" from="PauseMenu/MarginContainer/NinePatchRect/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_button_up"]
[connection signal="button_up" from="DeathScreen/MarginContainer/VBoxContainer/ReturnToMenuButton" to="." method="return_to_menu_button_pressed"]
[connection signal="button_up" from="WinScreen/MarginContainer/VBoxContainer/ReturnToMenuButton" to="." method="return_to_menu_button_pressed"]
